[package]
name = "mr-ulid"
description = "Robust and Hassle-Free ULIDs (Universally Unique Lexicographically Sortable Identifier)"
version = "3.0.0"
edition = "2024"
rust-version = "1.85"

categories = ["encoding", "data-structures", "web-programming"]
keywords = ["ulid", "unique", "identifier", "lexicographical"]

license = "MIT"
authors = ["Michael Roth <mail@mroth.net>"]

repository = "https://github.com/mrothNET/mr-ulid"
readme = "README.md"

[package.metadata."docs.rs"]
all-features = true

[features]
default = ["rand"]

[dependencies]
rand = { version = "0.10", optional = true, features = ["sys_rng", "std_rng"] }
serde = { version = "1", optional = true }

[dev-dependencies]
serde_derive = "1"
serde_json = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
redundant_pub_crate = "allow"
